--- a/WCHProjects/Moduls/Shop/controller/ShopInfoViewController.xib
+++ b/WCHProjects/Moduls/Shop/controller/ShopInfoViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShopInfoViewController">
             <connections>
+                <outlet property="tableView" destination="gyV-C8-qgM" id="9h9-SL-bWa"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
