--- a/WCHProjects/Moduls/CallCar/controller/CallCarDetailViewController.xib
+++ b/WCHProjects/Moduls/CallCar/controller/CallCarDetailViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="addBtn" destination="9gE-FK-7vL" id="gCw-NN-onE"/>
                 <outlet property="descLab" destination="VjK-nJ-Bzx" id="cqb-Fa-lwj"/>
+                <outlet property="shuomingLab" destination="Hat-Yf-HK3" id="7PT-R2-liH"/>
                 <outlet property="submitBtn" destination="4dA-PO-Hqx" id="BKc-Gf-3xz"/>
                 <outlet property="tableView" destination="mxo-c7-2nO" id="GPR-g9-c4W"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
